--- a/app/views/meetups/index.erb
+++ b/app/views/meetups/index.erb
@@ -1,1 +1,6 @@
 <h1>Meetups</h1>
+
+
+<% @meetups.each do |meetup| %>
+  <li><a href="/meetups/<%= meetup["id"]%>"><%= meetup.name %></a></li>
+  <% end %>
