--- a/app/views/meetups/show.erb
+++ b/app/views/meetups/show.erb
@@ -1,4 +1,4 @@
-<h2><%= @name %></h2>
-<h3><%= @description %></h3>
-<h3><%= @location %></h3>
-<h3><%= @creator %> </h3>
+<h2><%= @meetup.name %></h2>
+<h3><%= @meetup.description %></h3>
+<h3><%= @meetup.location %></h3>
+<h3><%= @meetup.creator.username %></h3>
